--- a/myScanShopv1/app/src/main/AndroidManifest.xml
+++ b/myScanShopv1/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         android:theme="@style/Theme.MyScanShop"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".UsuariosActivity"
+            android:exported="false" />
+        <activity
             android:name=".InfoProductoActivity"
             android:exported="false" />
         <activity
