cambio de splash por activity login

--- a/myScanShopv1/app/src/main/AndroidManifest.xml
+++ b/myScanShopv1/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
             android:name=".MenuActivity"
             android:exported="false" />
         <activity
-            android:name=".Splash"
+            android:name=".Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
