--- a/myScanShopv1/app/build.gradle
+++ b/myScanShopv1/app/build.gradle
@@ -35,8 +35,7 @@ dependencies {
     //Libreria lector de códigos
     implementation 'com.journeyapps:zxing-android-embedded:4.1.0'
     //Conector java
-    implementation files('libs//mysql-connector-java-8.0.29.jar')
-    implementation files('libs//mysql-connector-java-8.0.29.jar')
+    implementation 'com.android.volley:volley:1.2.1'
     //cargar imagenes desde url
     implementation 'com.squareup.picasso:picasso:2.71828'
     testImplementation 'junit:junit:4.13.2'
