Añadadida función foto

--- a/myScanShopv1/app/src/main/AndroidManifest.xml
+++ b/myScanShopv1/app/src/main/AndroidManifest.xml
@@ -20,6 +20,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyScanShop"
         android:usesCleartextTraffic="true">
+        <meta-data
+            android:name="com.google.android.actions"
+            android:resource="@xml/file_paths" />
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="es.ifp.myscanshopv1.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
         <activity
             android:name=".ActualizarProductoActivity"
             android:exported="false" />
