--- a/myScanShopv1/app/src/main/AndroidManifest.xml
+++ b/myScanShopv1/app/src/main/AndroidManifest.xml
@@ -21,19 +21,16 @@
         android:theme="@style/Theme.MyScanShop"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".HistorialActivity"
+            android:exported="false" />
+        <activity
             android:name=".SeleccionarClienteActivity"
             android:exported="false" />
         <activity
             android:name=".ActualizarClienteActivity"
             android:exported="false" />
         <activity
-            android:name=".InfoClienteActivity"
-            android:exported="false" />
-        <activity
             android:name=".AddNuevoClienteActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ClientesActivity"
             android:exported="false" />
         <activity
             android:name=".DatosFacturacionActivity"
